--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "devDependencies": {
     "@chainlink/contracts": "^1.3.0",
     "@chainlink/env-enc": "^1.0.5",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.12",
     "dotenv": "^16.4.7",
-    "hardhat": "^2.22.17"
+    "ethers": "^6.13.4",
+    "hardhat": "^2.22.17",
+    "hardhat-deploy": "^0.12.4",
+    "hardhat-deploy-ethers": "^0.4.2"
   }
 }
