--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^6.13.4",
     "hardhat": "^2.22.17",
     "hardhat-deploy": "^0.12.4",
-    "hardhat-deploy-ethers": "^0.4.2"
+    "hardhat-deploy-ethers": "^0.4.2",
+    "hardhat-gas-reporter": "^2.2.2"
   }
 }
